# bevy_gltf_collider

./: Cargo.toml  README.md
assets/models/: monkey.glb  rock.gltf
examples/: load_monkey.rs  load_object.rs  load_rocks.rs
src/: extras_collider.rs  lib.rs  mesh_collider.rs
