[package]
name = "bevy_gltf_collider"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1"}
bevy_rapier3d = {version = "0.21.0", features=["serde-serialize"] }
serde_json = "1.0"
serde = "1.0"
bincode="1.3.3"
[dev-dependencies]
rand = "0.8.5"
