[package]
name = "bevy_gltf_collider"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0"}
bevy_rapier3d = { git="https://github.com/devil-ira/bevy_rapier.git", branch="bevy-0.12", features=['serde-serialize'] }
serde_json = {version="1.0"}
serde = {version="1.0"}
bincode="1.3.3"
[dev-dependencies]
rand = "0.8.5"
